# invincibot

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  README2.md
include/sc2api/: sc2_game_settings.h
invincibot/: CMakeLists.txt  simple_bot.cc
src/: main.cpp  simple_bot.cc  simple_bot.cpp  simple_bot.h
src/common/: Build.cpp  Build.h  Worker.h
src/core/: Converter.cpp
src/interface/: Order.h
src/sc2api/: sc2_game_settings.cc
src/strategies/: MarinePush.cpp  MarinePush.h  MarinePushIdle.cpp  MarinePushIdle.h
src/tools/: BuilderOrder.cpp  BuilderOrder.h  EnemyFinder.h
test/: script.py
